--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" 
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="hu.dpal.phonegap.plugins.UniqueDeviceID" 
+        id="hu.dpal.phonegap.plugins.UniqueDeviceID"
         version="1.2.0">
 
     <name>UniqueDeviceID</name>
@@ -33,6 +33,22 @@
 
     </platform>
 
+    <!-- amazon-fireos -->
+    <platform name="amazon-fireos">
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="UniqueDeviceID">
+                <param name="android-package" value="hu.dpal.phonegap.plugins.UniqueDeviceID" />
+            </feature>
+        </config-file>
+
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+        </config-file>
+
+        <source-file src="src/android/UniqueDeviceID.java" target-dir="src/hu/dpal/phonegap/plugins" />
+
+    </platform>
+
     <!-- ios -->
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -41,7 +57,7 @@
                 <param name="onload" value="true" />
             </feature>
         </config-file>
-        
+
         <header-file src="src/ios/UICKeyChainStore.h" />
         <source-file src="src/ios/UICKeyChainStore.m" />
 
